--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yuwei Yang</title>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>Yuwei Yang</h1>
+        </header>
+        <main></main>
+        <footer>&copy; Copyright 2022</footer>
+    </div>
     
 </body>
 </html>
