--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
         <header>
             <h1>Yuwei Yang</h1>
         </header>
-        <main></main>
+        <main>
+            <img src="images/4.Yuwei (Vicky) Yang#041049310.jpg" alt="image of myself">
+            <ul>
+                <li>Student Number : 041049310</li>
+                <li>Program Name : IMD Program</li>
+                <li>Course Name : 22F_MTM6201_020 Web Development II</li>
+                <li>One Interesting Fact about Me</li>
+                <p>I always loss my way. Last Sunday, I wanted to change my payment account in Costco wholesale. Because I am new here, therefore, I used the road map by my phone. After I inputed the destination and followed my map, I flet a little strange. The words on the road sign were to be Franch. Hence, I double checked my road map, I found that I made a big mistake. I inputed a wrong destination that the address of the Costco was in the Quebec. </p>
+            </ul>
+        </main>
         <footer>&copy; Copyright 2022</footer>
     </div>
     
