--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Yuwei Yang</h1>
         </header>
         <main>
-            <img src="images/4.Yuwei (Vicky) Yang#041049310.jpg" alt="image of myself">
+            <img src="images/myself.jpg" alt="image of myself">
             <ul>
                 <li>Student Number : 041049310</li>
                 <li>Program Name : IMD Program</li>
